Added a line of dialogue (Nate)

--- a/Robert_lab-7.Rmd
+++ b/Robert_lab-7.Rmd
@@ -19,3 +19,5 @@ gc_df <- read_csv("gc_df.csv")
 
 
 WE are asking: Is there a significant difference in recommended gun control action for male and female respondents (should guns be easier, harder, to get?)
+
+This: I'm Nate and I'm updating this markdown file here. 
