--- a/Robert_lab-7.Rmd
+++ b/Robert_lab-7.Rmd
@@ -26,7 +26,11 @@ Robert: data wrangling and counts
 ```{r}
 get_guns <- gc_df%>%
   filter(gender !="NA", make_get_guns !="NA") %>%
-  count(gender, make_get_guns)
+  count(gender, make_get_guns) %>%
+  spread(make_get_guns, n) %>%
+  select(-gender)
+
+rownames(get_guns) <- c("Female","Male")
 
 ```
 
